added dynamic login/logout links; added logout.js functions

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
     <div class="container-fluid h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-md-9 col-lg-6 col-xl-5 text-center">
-                <img src="views/layouts/images/alexandriaLogo.jpg"
+                <img src="/images/alexandriaLogo.jpg"
                 class="img-fluid" alt="Sample image" width="400px";>
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
