--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
                         <button type="button" class="btn btn-primary btn-floating mx-1">
-                            <i class="bi bi-facebook icon-blue"></i>
+                            <i class="bi bi-facebook"></i>
                         </button>
                         <button type="button" class="btn btn-primary btn-floating mx-1">
                             <i class="bi bi-google"></i>
