added homepage.handlebars and copied homepage.html content

--- a/views/templates/homepage.html
+++ b/views/templates/homepage.html
@@ -48,7 +48,7 @@
     
      <!-- Header-->
      <header class="bg-dark py-5">
-       <img src="./views/layouts/images/alexandria.jpg" alt="library of alexandria" width="500px">
+       <img src="/images/alexandria.jpg" alt="library of alexandria" width="500px">
        <div class="container px-4 px-lg-5 my-5">
           
            <div class="text-center text-white">
