--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,37 +7,57 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>B.o.Alexandria</title>
+    <title>Books of Alexandria</title>
 </head>
 <body>
     <!-- header / nav bar -->
-<header class="container">
-    <h1 class="center">
-        <a href="/">Books of Alexandria</a>
-    </h1>
-    <nav class="center">
-        <ul class="nav">
-            {{#if loggedIn}}
-            <li class="nav-item">
-                <button id="logout" type="button" class="btn btn-link">Logout</button>
-            </li>
-            {{else}}
-            <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/signup">Signup</a>
-            </li>
-            {{/if}}
-        </ul>
-    </nav>
-</header>
-<main>
-    {{{ body }}}
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-{{#if loggedIn}}
-<script src="/javascript/logout.js"></script>
-{{/if}}
+   <nav class="navbar navbar-expand-lg navbar-dark text-light bg-gradient" style="background-color: #243873;">
+       <div class="container-fluid">
+         <a class="navbar-brand" href="/">Books of Alexandria</a>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+             <li class="nav-item">
+               <a class="nav-link active" aria-current="page" href="/inventory">Inventory</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="/login">Login</a>
+             </li>
+             <li class="nav-item dropdown">
+               </a>
+               <ul class="dropdown-menu" >
+                 <li><a class="dropdown-item" href="#"></a></li>
+                 <li><a class="dropdown-item" href="#"></a></li>
+                 <li><hr class="dropdown-divider"></li>
+                 <li><a class="dropdown-item" href="#"></a></li>
+               </ul>
+             </li>
+           </ul>
+           <form class="d-flex">
+             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+             <button class="btn btn-outline-success" type="submit">Search</button>
+           </form>
+         </div>
+       </div>
+     </nav>  
+   
+    <main>
+        {{{ body }}}
+    </main>
+    
+    <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 text-light bg-gradient" style="background-color: #243873;">
+        <!-- Copyright -->
+        <div class="text-white mb-3 mb-md-0 .bg-primary.bg-gradient">
+            Copyright © 2020. All rights reserved.
+        </div>
+        <!-- Copyright -->
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 </html>
