--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,9 +22,15 @@
              <li class="nav-item">
                <a class="nav-link active" aria-current="page" href="/inventory">Inventory</a>
              </li>
+             {{#if loggedIn}}
+             <li class="nav-item">
+               <button id="logout" type="button" class="btn btn-link">Logout</button>
+             </li>
+             {{else}}
              <li class="nav-item">
                <a class="nav-link" href="/login">Login</a>
              </li>
+             {{/if}}
              <li class="nav-item dropdown">
                </a>
                <ul class="dropdown-menu" >
