--- a/views/templates/invetory.html
+++ b/views/templates/invetory.html
@@ -49,21 +49,27 @@
 </section>
 
 <!-- book cards -->
-<div class="container">
-    <div class="row">
-        <div class="col-sm">
-            <div class="card" style="width: 18rem">
-                <img src="" alt="image of book" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Book Title</h5>
-                    <p class="card-text">Genre:</p>
-                    <p class="card-text">Author:</p>
-                    <p class="card-text">Price:</p>
-                    <p class="card-text">Stock:</p>
-                    <a href="#"  class="btn btn-primary">PURCHASE</a>
-                </div>
-            </div>
+<div class="infoCard rgb">
+    <div id="bookImage" class="infoCard-image"></div>
+    <div class="cardText">
+        <h2>Book Title:</h2>
+        <p>Author:</p>
+    </div>
+    <div class="infoCard-stats">
+        <div class="infoStat">
+            <div class="infoValue">sci-fi</div>
+            <div class="infoType">genre</div>
         </div>
+        <div class="infoStat infoBorder">
+            <div class="infoValue">34.99</div>
+            <div class="infoType">Price:</div>
+        </div>
+        <div class="infoStat">
+            <div class="infoValue">4</div>
+            <div class="infoType">inventory</div>
+        </div>
+    </div>
+</div>
 
         <div class="col-sm">
             <div class="card" style="width: 18rem">
