--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+.icon-blue {
+   color: #9BB1ED;
+   background-color: #9BB1ED;
+}
 .genre {
     background-image: url('../images/genre-2.jpg');
     background-position: center;
@@ -8,3 +12,116 @@
    color: #9BB1ED;
    background-color: #9BB1ED;
 }
+
+/* inventory card edits */
+.infoCard {
+   width: fit-content;
+   display: grid;
+   grid-template-columns: 300px;
+   grid-template-rows: 210px 210px 80px;
+   grid-template-areas: "image" "text" "stats";
+   border-radius: 18px;
+   background: white;
+   box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   text-align: center;
+   transition: 0.5s ease;
+   cursor: pointer;
+   margin:30px;
+   transform-style: preserve-3d;
+   transform: perspective(1000px);
+ }
+
+ .infoCard-image {
+   grid-area: image;
+ }
+ .cardText {
+   grid-area: text;
+ }
+ .infoCard-stats {
+   grid-area: stats; 
+ }
+
+ .infoCard-image {
+   grid-area: image;
+   /* background: url("../images/alexandria.jpg"); */
+   border-top-left-radius: 15px;
+   border-top-right-radius: 15px;
+   background-size: contain;
+ }
+
+ .cardText {
+   grid-area: text;
+   margin: 25px;
+ }
+ .cardText h2 {
+   margin-top:0px;
+   font-size:28px;
+ }
+
+ .cardText p {
+   margin-top:0px;
+   font-size:28px;
+ }
+
+ .infoCard-stats {
+   grid-area: stats; 
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 1fr;
+ 
+   border-bottom-left-radius: 15px;
+   border-bottom-right-radius: 15px;
+   background: rgb(7, 173, 238);
+ }
+
+ .infoCard-stats .infoStat {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+ 
+   color: white;
+   padding:10px;
+ }
+
+ .infoBorder {
+    border-left: solid;
+    border-right: solid;
+    border-color: gold;
+ }
+
+ .infoCard:hover {
+   transform: scale(1.15);
+   box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+ }
+
+ /* rgb effect */
+ .rgb::after{
+   content:"";
+   background: linear-gradient(45deg,
+   #fffb09 0%, 
+   #e4d505 10%,
+   #d8fc10 20%,
+   #4fdc4a 30%, 
+   #3fdad8 40%,
+   #2fc9e2 50%, 
+   #1c7fee 60%, 
+   #eef215 70%, 
+   #e9ff25f8 80%, 
+   #07d6fb 90%, 
+   #e5ff00 100%  )
+   repeat 0% 0% / 300% 100%;
+   position: absolute;
+   inset: -3px;
+   border-radius: 16px;
+   filter: blur(8px); 
+   transform: translateZ(-5px); 
+   animation: rgb 6s linear infinite;
+ }
+ @keyframes rgb {
+   0% {background-position: 0% 50%;}
+   50% {background-position: 100% 50%;}
+   100% {background-position: 0% 50%;}
+ }
+ 
