--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -1,51 +1,43 @@
 {{!-- products page --}}
-<section class="container filter">
-   <div class="row">
-        <h2>Filter Search</h2>
+<div class="container bcontent center mt-5">
+    <h2>
+        Edit Search
+    </h2>
+    <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Genre</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">On Sale</button>
+</div>
 
-        <div class="col-md filter-genre">
-            <h3>
-                By Genre
-            </h3>
-        </div>
-        <div class="col-md filter-author">
-            <h3>
-                By Author
-            </h3>
-        </div>
-        <div class="col-md filter-sale">
-            <h3>
-                On Sale
-            </h3>
-        </div>
-    </div>
-</section>
 
 <!-- book cards -->
-{{#each books}}
-<div class="infoCard rgb">
-    
-    <div id="bookImage" class="infoCard-image">
-        <img src="{{this.book_img}}" class="infoCard-image" alt="image of book">
-    </div>
-    <div class="cardText">
-        <h2>Book Title: {{this.book_title}}</h2>
-        <p>Author: {{this.author}}</p>
-    </div>
-    <div class="infoCard-stats">
-        <div class="infoStat">
-            <div class="infoValue">{{this.gere.genre_name}}</div>
-            <div class="infoType">Genre</div>
+<div class="container">
+   <div class="row">
+        {{#each books}}
+        <div class="infoCard rgb col-sm-auto">
+            
+            <div id="bookImage" class="infoCard-image">
+                <img src="{{this.book_img}}" class="book-image" alt="image of book">
+            </div>
+            <div class="cardText">
+                <h2>{{this.book_title}}</h2>
+                <p>By: {{this.author}}</p>
+            </div>
+            <div class="infoCard-stats">
+                <div class="infoStat">
+                    <div class="infoValue">{{this.gere.genre_name}}</div>
+                    <div class="infoType">Genre</div>
+                </div>
+                <div class="infoStat infoBorder">
+                    <div class="infoValue">{{this.price}}</div>
+                    <div class="infoType">Price:</div>
+                </div>
+                <div class="infoStat">
+                    <div class="infoValue">{{this.stock}}</div>
+                    <div class="infoType">Inventory</div>
+                </div>
+            </div>
         </div>
-        <div class="infoStat infoBorder">
-            <div class="infoValue">{{this.price}}</div>
-            <div class="infoType">Price:</div>
-        </div>
-        <div class="infoStat">
-            <div class="infoValue">{{this.stock}}</div>
-            <div class="infoType">Inventory</div>
-        </div>
-    </div>
+    {{/each}}
+   </div>
 </div>
-{{/each}}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
