--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,6 +27,9 @@
              <li class="nav-item">
                <a class="nav-link active" aria-current="page" href="/employee-edits">Edit Inventory</a>
              </li>
+              <li class="nav-item">
+               <a class="nav-link active" aria-current="page" href="/edit-employee">Edit Employee</a>
+             </li>
              {{#if loggedIn}}
              <li class="nav-item">
                <button id="logout" type="button" class="btn btn-link">Logout</button>
