centered content on edit forms

--- a/views/employee-edits.handlebars
+++ b/views/employee-edits.handlebars
@@ -1,4 +1,4 @@
-<div class="container bcontent center mt-5">
+<div class="container bcontent text-center mt-5">
          <h2>
              Edit Inventory
          </h2>
