--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -1,6 +1,6 @@
 {{!-- products page --}}
-<div class="container bcontent center mt-5">
-    <h2>
+<div class="container bcontent text-center mt-5">
+    <h2 class="">
         Edit Search
     </h2>
     <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Genre</button>
@@ -24,7 +24,7 @@
             </div>
             <div class="infoCard-stats">
                 <div class="infoStat">
-                    <div class="infoValue">{{this.gere.genre_name}}</div>
+                    <div class="infoValue">{{this.genre.genre_name}}</div>
                     <div class="infoType">Genre</div>
                 </div>
                 <div class="infoStat infoBorder">
