--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+/* nav bar  */
 .icon-blue {
    color: #9BB1ED;
    background-color: #9BB1ED;
@@ -137,3 +138,4 @@
 .col-sm-auto {
   padding: 0px !important;
 }
+
