--- a/views/edit-employee.handlebars
+++ b/views/edit-employee.handlebars
@@ -1,6 +1,6 @@
-<div class="container bcontent center mt-5">
+<div class="container bcontent text-center mt-5">
          <h2>
-             Edit Inventory
+             Edit Employee
          </h2>
          <button type="button" href="" class="btn btn-primary btn-lg btn-block p-3 m-2">Add Employee</button>
          <button type="button" href="" class="btn btn-primary btn-lg btn-block p-3 m-2">Delete Employee</button>
