--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <!-- Header-->
-<header class="bg-dark py-5">
+<header class="bg-dark py-5 heroImage">
     <img src="/images/alexandria.jpg" alt="library of alexandria" width="500px">
     <div class="container px-4 px-lg-5 my-5">      
         <div class="text-center text-white">
