--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -61,7 +61,7 @@
         {{{ body }}}
     </main>
     
-    <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 text-light bg-gradient" style="background-color: #243873;">
+    <div class="text-center text-md-start py-4 px-4 px-xl-5 text-light bg-gradient mt-5" style="background-color: #243873;">
         <!-- Copyright -->
         <div class="text-white mb-3 mb-md-0 .bg-primary.bg-gradient">
             Copyright © 2020. All rights reserved.
