--- a/views/templates/employee-edits.html
+++ b/views/templates/employee-edits.html
@@ -46,7 +46,7 @@
        </div>
      </nav>  
     <!--  -->
-     <div class="container bcontent center mt-5">
+     <div class="container bcontent text-center mt-5">
          <h2>
              Edit Inventory
          </h2>
