--- a/views/templates/homepage.html
+++ b/views/templates/homepage.html
@@ -7,7 +7,7 @@
    <title>Books of Alexandria</title>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   <link rel="stylesheet" href="">
+   <link rel="stylesheet" href="../../public/stylesheets/style.css">
  </head>
  
 <body>
@@ -47,8 +47,8 @@
      </nav>  
     
      <!-- Header-->
-     <header class="bg-dark py-5">
-       <img src="/images/alexandria.jpg" alt="library of alexandria" width="500px">
+     <header class="bg-dark py-5 heroImage">
+       <img src="../../public/images/alexandria.jpg" class="" alt="library of alexandria">
        <div class="container px-4 px-lg-5 my-5">
           
            <div class="text-center text-white">
