initial add book js file

--- a/views/employee-edits.handlebars
+++ b/views/employee-edits.handlebars
@@ -14,27 +14,27 @@
         <h1 class="text-center">Add Book To Inventory</h1>
         {{!-- <!-- add book title --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="text" id="" class="form-control form-control-lg"
+          <input type="text" id="title" class="form-control form-control-lg"
             placeholder="Enter Title of Book" />
         </div>
         {{!-- <!-- add author --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="text" id="" class="form-control form-control-lg"
+          <input type="text" id="author" class="form-control form-control-lg"
             placeholder="Enter Author" />
         </div>
         {{!-- <!-- add isbn --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="text" id="" class="form-control form-control-lg"
+          <input type="text" id="isbn" class="form-control form-control-lg"
             placeholder="isbn" />
         </div>
         {{!-- <!-- add genre id --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="" class="form-control form-control-lg"
+          <input type="number" id="genre" class="form-control form-control-lg"
             placeholder="Enter Genre Id" />
         </div>
         {{!-- <!-- add price --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="" class="form-control form-control-lg"
+          <input type="number" id="price" class="form-control form-control-lg"
             placeholder="Enter Price" />
         </div>
         {{!-- <!-- Add book image --> --}}
@@ -44,7 +44,7 @@
         </div>
         {{!-- <!-- submit button --> --}}
         <div class="text-center text-lg-start mt-4 pt-2 pb-2">
-          <button type="submit" class="btn btn-lg"
+          <button type="submit" class="btn btn-lg" id="add-book"
             style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #9BB1ED;">Submit</button>
         </div>
       </form>
@@ -116,3 +116,5 @@
         </div>
       </form>
     </div>
+</div>
+<script src="/javascript/add-book.js"></script>
