--- a/views/employee-edits.handlebars
+++ b/views/employee-edits.handlebars
@@ -14,28 +14,33 @@
         <h1 class="text-center">Add Book To Inventory</h1>
         {{!-- <!-- add book title --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="text" id="title" class="form-control form-control-lg"
+          <input type="text" name="title" class="form-control form-control-lg"
             placeholder="Enter Title of Book" />
         </div>
         {{!-- <!-- add author --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="text" id="author" class="form-control form-control-lg"
+          <input type="text" name="author" class="form-control form-control-lg"
             placeholder="Enter Author" />
         </div>
         {{!-- <!-- add isbn --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="text" id="isbn" class="form-control form-control-lg"
+          <input type="text" name="isbn" class="form-control form-control-lg"
             placeholder="isbn" />
         </div>
         {{!-- <!-- add genre id --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="genre" class="form-control form-control-lg"
+          <input type="number" name="genre" class="form-control form-control-lg"
             placeholder="Enter Genre Id" />
         </div>
         {{!-- <!-- add price --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="price" class="form-control form-control-lg"
+          <input type="number" name="price" class="form-control form-control-lg"
             placeholder="Enter Price" />
+        </div>
+        {{!-- <!-- add stock --> --}}
+        <div class="form-outline mb-2 p-2">
+          <input type="number" name="stock" class="form-control form-control-lg"
+            placeholder="Enter Stock" />
         </div>
         {{!-- <!-- Add book image --> --}}
         <div class="form-outline mb-2 p-2">
@@ -56,7 +61,7 @@
       <form class="delete-form">
         {{!-- <!-- delete by id --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="delete-id" class="form-control form-control-lg"
+          <input type="number" name="delete-id" class="form-control form-control-lg"
             placeholder="Enter Id of Book to Delete from Inventory" />
         </div>
         {{!-- <!-- submit button --> --}}
@@ -73,17 +78,17 @@
       <form class="edit-form">
         {{!-- <!-- get by id --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="id-stock" class="form-control form-control-lg"
+          <input type="number" name="id-stock" class="form-control form-control-lg"
             placeholder="Enter Id of Book to Update Inventory" />
         </div>
         {{!-- <!-- updte inventory --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="new-stock" class="form-control form-control-lg"
+          <input type="number" name="new-stock" class="form-control form-control-lg"
             placeholder="Update Inventory" />
         </div>
         {{!-- <!-- submit button --> --}}
         <div class="text-center text-lg-start mb-2 p-2">
-          <button type="submit" class="btn btn-lg" id="stock-btn"
+          <button type="submit" class="btn btn-lg"
             style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #9BB1ED;">Submit</button>
         </div>
       </form>
@@ -95,12 +100,12 @@
       <form class="sales-form">
         {{!-- <!-- get by id --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="id-price" class="form-control form-control-lg"
+          <input type="number" name="id-price" class="form-control form-control-lg"
             placeholder="Enter Id of Book to Place on Sale" />
         </div>
         {{!-- <!-- updte price --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="number" id="new-price" class="form-control form-control-lg"
+          <input type="number" name="new-price" class="form-control form-control-lg"
             placeholder="Update Price" />
         </div>
         <div class="form-check">
@@ -111,7 +116,7 @@
         </div>
         {{!-- <!-- submit button --> --}}
         <div class="text-center text-lg-start mb-2 p-2">
-          <button type="submit" class="btn btn-lg" id="price-btn"
+          <button type="submit" class="btn btn-lg"
             style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #9BB1ED;">Submit</button>
         </div>
       </form>
