--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -3,9 +3,10 @@
     <h2 class="">
         Edit Search
     </h2>
-    <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Genre</button>
-    <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author</button>
-    <button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">On Sale</button>
+    <button type="button" id="searchGenre" class="btn btn-primary btn-lg btn-block p-3 m-2">By Genre</button>
+    <a href="/inventory/byauthordesc"><button type="button" id="searchAuthor" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author: Descending</button></a>
+    <a href="/inventory/byauthorasc"><button type="button" id="searchAuthor" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author: Ascending</button></a>
+    <a href="/inventory/onsale"><button type="button" id="searchOnSale" class="btn btn-primary btn-lg btn-block p-3 m-2">On Sale</button></a>
 </div>
 
 
@@ -40,4 +41,3 @@
     {{/each}}
    </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
