--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,107 +2,73 @@
 <div class="container">
     <div class="row">
         {{!-- search by genre --}}
-         <div class="infoCard rgb col-sm-auto">
-            <div id="bookImage" class="infoCard-image"></div>
-            <div class="cardText">
-                <h2>Book Title:</h2>
-                <p>Author:</p>
+         <div class="homeCard rgb col-sm-auto">
+            <div id="" class="homeCard-image">
+                <img src="/images/alexandria.jpg" alt="image of library of alexandria" class="">
             </div>
-            <div class="infoCard-stats">
-                <div class="infoStat">
-                    <div class="infoValue">sci-fi</div>
-                    <div class="infoType">genre</div>
-                </div>
-                <div class="infoStat infoBorder">
-                    <div class="infoValue">34.99</div>
-                    <div class="infoType">Price:</div>
-                </div>
-                <div class="infoStat">
-                    <div class="infoValue">4</div>
-                    <div class="infoType">inventory</div>
-                </div>
+            <div class="HomeCardText">
+                <h2>Search By Genre</h2>
+                <p>search from any genre from sci-fi to non-fiction</p>
+            </div>
+            <div class="homeCard-stats">
             </div>
         </div>
         {{!-- sort author A-Z --}}
-         <div class="infoCard rgb col-sm-auto">
-            <div id="bookImage" class="infoCard-image"></div>
-            <div class="cardText">
-                <h2>Book Title:</h2>
-                <p>Author:</p>
+         <div class="homeCard rgb col-sm-auto">
+            <div id="" class="homeCard-image">
+                <img src="/images/homeCard2.jpg" alt="image of library of alexandria" class="">
             </div>
-            <div class="infoCard-stats">
-                <div class="infoStat">
-                    <div class="infoValue">sci-fi</div>
-                    <div class="infoType">genre</div>
-                </div>
-                <div class="infoStat infoBorder">
-                    <div class="infoValue">34.99</div>
-                    <div class="infoType">Price:</div>
-                </div>
-                <div class="infoStat">
-                    <div class="infoValue">4</div>
-                    <div class="infoType">inventory</div>
-                </div>
+            <div class="HomeCardText">
+                <h2>Sort Authors</h2>
+                <p>sort all authors from a-z</p>
+            </div>
+            <div class="homeCard-stats">
             </div>
         </div>
         {{!-- books on sale --}}
-         <div class="infoCard rgb col-sm-auto">
-            <div id="bookImage" class="infoCard-image"></div>
-            <div class="cardText">
-                <h2>Book Title:</h2>
-                <p>Author:</p>
+           <div class="homeCard rgb col-sm-auto">
+            <div id="" class="homeCard-image">
+                <img src="/images/homeCard3.jpg" alt="image of library of alexandria" class="">
             </div>
-            <div class="infoCard-stats">
-                <div class="infoStat">
-                    <div class="infoValue">sci-fi</div>
-                    <div class="infoType">genre</div>
-                </div>
-                <div class="infoStat infoBorder">
-                    <div class="infoValue">34.99</div>
-                    <div class="infoType">Price:</div>
-                </div>
-                <div class="infoStat">
-                    <div class="infoValue">4</div>
-                    <div class="infoType">inventory</div>
-                </div>
+            <div class="HomeCardText">
+                <h2>On Sale</h2>
+                <p>view all the books we have on sale!</p>
+            </div>
+            <div class="homeCard-stats">
             </div>
         </div>
     </div>
 </div>
 
- <!-- Carousel -->
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active" style="background-image:url(./public/images/book4.png) ;">
-        <div class="container carousel-container">
-            <h1>Example Headline</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae sed hic autem harum perspiciatis cupiditate delectus doloremque minima consectetur eos.</p>
-        </div>
-        </div>
-        <div class="carousel-item" style="background-image:url(./public/images/book5.png)";>
-        <div class="container carousel-container">
-            <h1>Example Headline</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae sed hic autem harum perspiciatis cupiditate delectus doloremque minima consectetur eos.</p>
-        </div>
-        </div>
-        <div class="carousel-item" style="background-image:url(./public/images/book6.png)";>
-        <div class="container carousel-container">
-            <h1>Example Headline</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae sed hic autem harum perspiciatis cupiditate delectus doloremque minima consectetur eos.</p>
-        </div>
-        </div>
+<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/images/carousel1.jpg" alt="Los Angeles" class="d-block" style="width:100%">
     </div>
-    <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-        <span class="sr-only">Previous</span>
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    </a>
-    <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
-        <span class="sr-only">Previous</span>
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </a>
+    <div class="carousel-item">
+      <img src="/images/carousel2.jpg" alt="Chicago" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/carousel4.jpg" alt="New York" class="d-block" style="width:100%">
+    </div>
+  </div>
+  
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
 </div>
+
