--- a/views/templates/invetory.html
+++ b/views/templates/invetory.html
@@ -72,10 +72,12 @@
 </div>
 
 <div class="homeCard rgb">
-    <div id="" class="homeCard-image"></div>
+    <div id="" class="homeCard-image">
+        <img src="../../public/images/alexandria.jpg" alt="image of library of alexandria" class="">
+    </div>
     <div class="HomeCardText">
-        <h2>Book Title:</h2>
-        <p>Author:</p>
+        <h2>Search By Genre</h2>
+        <p>search from any genre from sci-fi to non-fiction</p>
     </div>
     <div class="homeCard-stats">
     </div>
