--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,7 +6,7 @@
                 class="img-fluid" alt="Sample image" width="400px";>
             </div>
             <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form class="login-form">
+                <form class="register-form">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign up with</p>
                         <button type="button" class="btn btn-primary btn-floating mx-1">
@@ -24,8 +24,8 @@
                     </div>
                     {{!-- name input --}}
                      <div class="form-outline mb-4">
-                        <input type="email" id="email-signup" class="form-control form-control-lg"
-                            placeholder="Enter a valid email address" />
+                        <input type="text" id="name-signup" class="form-control form-control-lg"
+                            placeholder="Enter your name" />
                         <label class="form-label" for="name-signup">Enter Name</label>
                     </div>
                     <!-- Email input -->
@@ -50,4 +50,4 @@
     </div>
 </section>
 
-<script src="/javascript/login.js"></script>
+<script src="/javascript/register-employee.js"></script>
