image and genre rendering correctly

--- a/views/employee-edits.handlebars
+++ b/views/employee-edits.handlebars
@@ -44,8 +44,8 @@
         </div>
         {{!-- <!-- Add book image --> --}}
         <div class="form-outline mb-2 p-2">
-          <input type="file" id="" class="form-control form-control-lg"
-            placeholder="Enter image file path" />
+          <input type="text" name="url" class="form-control form-control-lg"
+            placeholder="Enter image URL" />
         </div>
         {{!-- <!-- submit button --> --}}
         <div class="text-center text-lg-start mt-4 pt-2 pb-2">
