--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -34,7 +34,7 @@
     </div>
     <div class="infoCard-stats">
         <div class="infoStat">
-            <div class="infoValue">{{this.gere.genre_name}}</div>
+            <div class="infoValue">{{this.genre.genre_name}}</div>
             <div class="infoType">Genre</div>
         </div>
         <div class="infoStat infoBorder">
