added books to sale queue

--- a/views/employee-edits.handlebars
+++ b/views/employee-edits.handlebars
@@ -109,7 +109,7 @@
             placeholder="Update Price" />
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="" />
+          <input class="form-check-input" type="checkbox" value="" name="sale" />
           <label class="form-check-label" for="form2Example3">
             Add to sales que
           </label>
