fixed cards on homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
         <div id="" class="homeCard-image">
           <img src="/images/alexandria.jpg" alt="image of library of alexandria" class="">
         </div>
-        <div class="HomeCardText">
+        <div class="HomeCardText pt-5">
           <h2>Search By Genre</h2>
           <p>search from any genre from sci-fi to non-fiction</p>
         </div>
@@ -20,7 +20,7 @@
         <div id="" class="homeCard-image">
           <img src="/images/homeCard2.jpg" alt="image of library of alexandria" class="">
         </div>
-        <div class="HomeCardText">
+        <div class="HomeCardText pt-5">
           <h2>Sort Authors</h2>
           <p>sort all authors from a-z</p>
         </div>
@@ -34,7 +34,7 @@
         <div id="" class="homeCard-image">
           <img src="/images/homeCard3.jpg" alt="image of library of alexandria" class="">
         </div>
-        <div class="HomeCardText">
+        <div class="HomeCardText pt-5">
           <h2>On Sale</h2>
           <p>view all the books we have on sale!</p>
         </div>
