--- a/views/templates/invetory.html
+++ b/views/templates/invetory.html
@@ -72,10 +72,10 @@
 </div>
 
 <div class="homeCard rgb">
-    <div id="" class="homeCard-image">
+    <div id="homeCard-image" class="homeCard-image">
         <img src="../../public/images/alexandria.jpg" alt="image of library of alexandria" class="">
     </div>
-    <div class="HomeCardText">
+    <div id="homeCard-text" class="HomeCardText pt-5">
         <h2>Search By Genre</h2>
         <p>search from any genre from sci-fi to non-fiction</p>
     </div>
