--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -199,11 +199,11 @@ body{
   width: fit-content;
   display: grid;
   grid-template-columns: 300px;
-  grid-template-rows: 210px 210px 20px;
+  grid-template-rows: 200px 210px 20px;
   grid-template-areas: "image" "text" "stats";
   border-radius: 18px;
-  background: #1d1d1d;
-  color: white;
+  background: #34477D;
+  color: gold;
   box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
@@ -212,7 +212,6 @@ body{
   margin:30px;
   transform-style: preserve-3d;
   transform: perspective(1000px);
-  text-align: center;
 }
 
 .homeCard-image {
@@ -231,28 +230,16 @@ body{
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
-}
-
-.cardText {
-  grid-area: text;
-  margin: 25px;
-}
-.cardText h2 {
-  margin-top:0px;
-  font-size:28px;
-}
-
-.homeCardText p {
-  margin-top:0px;
-  font-size:28px;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .homeCard:hover {
   transform: scale(1.15);
   box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
 }
-.homeCard-image img {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
+
+#homeCard-text {
+  padding: auto ;
 }
