fixed button on  inventory

--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -4,10 +4,10 @@
         Edit Search
     </h2>
     <div class="row">
-        <div class="col-2">
+        <div class="col-sm-auto">
             <a href="/inventory"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">All</button></a>
         </div>
-        <div class="dropdown col-2">
+        <div class="dropdown col-sm-auto">
             <button class="btn btn-primary btn-lg btn-block p-3 m-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 By Genre
             </button>
@@ -23,13 +23,13 @@
                 <li><a class="dropdown-item" href="/inventory/bygenre/9">Comedy</a></li>
                 <li><a class="dropdown-item" href="/inventory/bygenre/10">Novel</a></li>
         </div>
-        <div class="col-3">
+        <div class="col-sm-auto">
             <a href="/inventory/byauthorasc"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author: Ascending</button></a>
         </div>
-        <div class="col-3">
+        <div class="col-sm-auto">
             <a href="/inventory/byauthordesc"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author: Descending</button></a>
         </div>
-        <div class="col-2">
+        <div class="col-sm-auto">
             <a href="/inventory/onsale"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">On Sale</button></a>
         </div>
     </div>
