--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -5,7 +5,7 @@
     </h2>
     <div class="row">
         <div class="col-sm-auto">
-            <a href="/inventory"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">All</button></a>
+            <a href="/inventory"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2" style="isolation:isolate;">All</button></a>
         </div>
         <div class="dropdown col-sm-auto">
             <button class="btn btn-primary btn-lg btn-block p-3 m-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,13 +24,13 @@
                 <li><a class="dropdown-item" href="/inventory/bygenre/10">Novel</a></li>
         </div>
         <div class="col-sm-auto">
-            <a href="/inventory/byauthorasc"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author: Ascending</button></a>
+            <a href="/inventory/byauthorasc"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2" style="isolation:isolate;">By Author: Ascending</button></a>
         </div>
         <div class="col-sm-auto">
-            <a href="/inventory/byauthordesc"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">By Author: Descending</button></a>
+            <a href="/inventory/byauthordesc"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2" style="isolation:isolate;">By Author: Descending</button></a>
         </div>
         <div class="col-sm-auto">
-            <a href="/inventory/onsale"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2">On Sale</button></a>
+            <a href="/inventory/onsale"><button type="button" class="btn btn-primary btn-lg btn-block p-3 m-2" style="isolation:isolate;">On Sale</button></a>
         </div>
     </div>
 </div>
