--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,13 +9,13 @@
                 <form class="login-form">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                        <button type="button" class="btn btn-primary btn-floating mx-1" style="isolation: isolate;">
                             <i class="bi bi-facebook"></i>
                         </button>
-                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                        <button type="button" class="btn btn-primary btn-floating mx-1" style="isolation: isolate;">
                             <i class="bi bi-google"></i>
                         </button>
-                        <button type="button" class="btn btn-primary btn-floating mx-1">
+                        <button type="button" class="btn btn-primary btn-floating mx-1" style="isolation: isolate;">
                             <i class="bi bi-twitter"></i>
                         </button>
                     </div>
@@ -46,9 +46,9 @@
                     </div>
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <button type="submit" class="btn btn-lg"
-                            style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #9BB1ED;">Login</button>
+                            style="padding-left: 2.5rem; padding-right: 2.5rem; background-color: #9BB1ED; isolation:isolate;">Login</button>
                         <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="/register"
-                            class="link-danger">Register</a></p>
+                            class="link-danger" style="isolation:isolate;">Register</a></p>
                     </div>
                 </form>
             </div>
